cleaner UI and physics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset=utf-8>
     <script src="audiograph.js"></script>
+    <script src="sylvester.js"></script>
   </head>
 
   <body>
