add post request handling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div><button id=load>load</button><div id=loadmenu></div></div>
     <canvas id="control_surface" width="1000" height="700"></canvas>
     <script src="ui.js"></script>
   </body>
